Producto detalle > Automatizado

--- a/site/src/views/products/productCreate.ejs
+++ b/site/src/views/products/productCreate.ejs
@@ -19,15 +19,15 @@
     </div>
     <div>
         <label for="price">Precio</label>
-        <input type="text" name="price" value="">
+        <input type="number" name="price">
     </div>
     <div>
         <label for="discount">Descuento</label>
-        <input type="text" name="discount" value="">
+        <input type="number" name="discount">
     </div>
     <div>
         <label for="competitorPrice">Precio Competencia</label>
-        <input type="text" name="competitorPrice" value="">
+        <input type="number" name="competitorPrice">
     </div>
     <div>
         <label for="category">Categoría</label>
