--- a/site/public/styles/home.css
+++ b/site/public/styles/home.css
@@ -278,24 +278,40 @@ header {
 }
 .producto-precios{
     height: 3rem;
+    display: flex;
+    align-items: center;
 }
-.precio-nuestro{
-    font-size: var(--font-size-primary-subtitle);
-    color:var(--default-primary-color);
-    font-weight: bold;
-    width: 4rem;
-    text-align: center;
-    display:inline-block;
-}
+
 .precio-competencia{
-    font-size: var(--font-size-primary);
+    font-size: var(--font-size-title);
     color:var(--red);
     font-weight: bold;
     text-decoration: line-through;
     width: 2.5rem;
     text-align: center;
-    display:inline-block;
+    flex-grow: 1;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+/*     display:inline-block; */
 }
+
+.precio-nuestro{
+    font-size: var(--font-size-title);
+    color:var(--default-primary-color);
+    font-weight: bold;
+    width: 4rem;
+    text-align: right;
+    flex-grow: 2;
+    height: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-right: 0.5rem;
+
+/*     display:inline-block; */
+}
+
 
 .producto-agregar{
     display: flex;
@@ -307,7 +323,7 @@ header {
     border-radius: 1rem;
     overflow: hidden;
     height: 2rem;
-    width: 80%;
+    flex-grow: 3;
     margin: 0 auto;
 }
 /*Fin Estilo para el home-showroom */
