--- a/site/src/views/products/productDetail.ejs
+++ b/site/src/views/products/productDetail.ejs
@@ -7,18 +7,18 @@
         <div id="header-DetalleProducto">
             <div class="producto-favorito">&#9829</div>
             <div class="producto-imagen">
-                <img src= <%= products[1].imagen%> >
+                <img src= "../img/productos/<%= requestedProduct.image%>" >
             </div>
             <div class="producto-footer">
-                <p class="producto-detalle"> <%= products[1].descripcion%> </p>
+                <p class="producto-detalle"> <%= requestedProduct.description%> &nbsp; &nbsp; <p class="producto-presentacion"> x <%= requestedProduct.display%></p> </p>
             </div>
-            <p class="producto-presentacion"> x <%= products[1].presentacion%></p>
+            
             <div class="producto-precios">
-                <p class="precio-nuestro"> <%= products[1].precio%> </p>
-                <p class="precio-competencia"> <%= products[1].precioCompetencia%> </p>
+                <div class="precio-competencia"> <%= requestedProduct.competitorPrice%> </div>
+                <div class="precio-nuestro"> <%= requestedProduct.price%> </div>
+                <div class="producto-agregar">Agregar</div>
             </div>
         </div>
-        <div class="producto-agregar">Agregar</div>
     </div>
 </body>
 </html>
