Dividir header en Top-Categorias-Buscador

--- a/site/public/styles/home.css
+++ b/site/public/styles/home.css
@@ -79,6 +79,7 @@ header {
     align-items: center;
     padding-right: var(--default-padding);
     padding-left: var(--default-padding);
+    margin-bottom: 15px;
 }
 
 #menu{
