--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -2,7 +2,11 @@
 <html lang="es">
     <%- include('./../partials/head') %>
 <body>
-    <%- include('./../partials/header') %>
+    <header>
+        <%- include('./partials/header') %>
+        <%- include('./partials/categoriesCarousel') %>
+        <%- include('./partials/searcher') %>
+    </header>
     <div id="carritoYcheckbox">
         <div id="carritoListaYtotal" class="carritoListaYtotal" >
             <div class="productosEnCarrito">
