--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -3,8 +3,11 @@
 
   <%- include('./../partials/head') %>
   <body>
-    <%- include('./../partials/header') %>
-  
+    <header>
+      <%- include('./partials/header') %>
+      <%- include('./partials/categoriesCarousel') %>
+      <%- include('./partials/searcher') %>
+    </header>
     <div class="contenedor">
       
       <!----------------bienvenida -------->
