--- a/site/src/views/categories/singleCategory.ejs
+++ b/site/src/views/categories/singleCategory.ejs
@@ -3,5 +3,6 @@
     <%- include('./../partials/head') %>
 <body>
     <%- include('./../partials/header') %>
+    Estoy en subcategorias
 </body>
 </html>
