--- a/site/src/views/categories/productsSubCategory.ejs
+++ b/site/src/views/categories/productsSubCategory.ejs
@@ -7,6 +7,6 @@
         <%- include('../partials/categoriesCarousel') %>
         <%- include('../partials/searcher') %>
     </header>
-    Estoy en subcategorias
+    Estoy en los productos de la categoria <%- parametros.id %> subcategoria <%- parametros.sub_id %>
 </body>
 </html>
