--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -4,9 +4,9 @@
 
 <body>
     <header>
-        <%- include('./partials/header') %>
-        <%- include('./partials/categoriesCarousel') %>
-        <%- include('./partials/searcher') %>
+        <%- include('../partials/header') %>
+        <%- include('../partials/categoriesCarousel') %>
+        <%- include('../partials/searcher') %>
     </header>
     <div class="contenedor">
         <div class="titulo">
