--- a/site/src/views/products/productEdit.ejs
+++ b/site/src/views/products/productEdit.ejs
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <body>
-<form style="max-width: 500px;" action="/productos/crear" method="POST"  enctype="multipart/form-data"> 
+<form style="max-width: 500px;" action="/productos/editar" method="POST"  enctype="multipart/form-data"> 
     <div>
-        <label for="idEdit"> ID a editar</label>
-        <input type="number" name="idEdit" value="">
+        <label for="id"> ID a editar</label>
+        <input type="text" name="id" value="">
     </div>
     <div>
-        <label for="newName"> Nombre nuevo</label>
-        <input type="text" name="newName" value="">
-    </div>
-    
-    <button type="submit">Editar producto</button>
+        <div>
+            <label for="name"> Nombre Nuevo</label>
+            <input type="text" name="name" value="">
+        </div>
+        <div>
+            <label for="description">Descripción Nueva</label>
+            <input type="text" name="description" value="">
+        </div>
+        <div>
+            <label for="display">Presentación Nueva</label>
+            <input type="text" name="display" value="">
+        </div>
+        <div>
+            <label for="imageProduct">Imagen Nueva</label>
+            <input type="file" name="imageProduct" value="">
+        </div>
+        <div>
+            <label for="price">Precio Nueva</label>
+            <input type="number" name="price">
+        </div>
+        <div>
+            <label for="discount">Descuento Nuevo</label>
+            <input type="number" name="discount">
+        </div>
+        <div>
+            <label for="competitorPrice">Precio Competencia  Nuevo</label>
+            <input type="number" name="competitorPrice">
+        </div>
+        <div>
+            <label for="category">Categoría nueva</label>
+            <input type="text" name="category" value="">
+        </div>    <button type="submit">Editar producto</button>
 
 
 </form>
