--- a/site/src/views/categories/singleCategory.ejs
+++ b/site/src/views/categories/singleCategory.ejs
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./../partials/head') %>
+    <%- include('../partials/head') %>
 <body>
     <header>
         <%- include('../partials/header') %>
         <%- include('../partials/categoriesCarousel') %>
         <%- include('../partials/searcher') %>
     </header>
-    Estoy en subcategorias
+    <div class="container-subcategorias">
+        <div class="titulo-categoria">Categoria</div>
+
+        <div class="subcategorias-container">
+            SubCategoria 1
+        </div>
+        <div class="subcategorias-container">
+            SubCategoria 2
+        </div>
+
+
+
+    </div>
 </body>
 </html>
