--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -16,5 +16,5 @@
 <link rel="stylesheet" type="text/css" href="./../styles/login.css">
 <link rel="stylesheet" type="text/css" href="./../styles/registro.css">
 <link rel="stylesheet" type="text/css" href="./../styles/footer.css">
-<link rel="stylesheet" type="text/css" href="./../styles/home.css">
+<link rel="stylesheet" type="text/css" href="../../styles/home.css">
 </head>
