--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -3,9 +3,9 @@
     <%- include('./../partials/head') %>
 <body>
     <header>
-        <%- include('./partials/header') %>
-        <%- include('./partials/categoriesCarousel') %>
-        <%- include('./partials/searcher') %>
+        <%- include('../partials/header') %>
+        <%- include('../partials/categoriesCarousel') %>
+        <%- include('../partials/searcher') %>
     </header>
     <div id="carritoYcheckbox">
         <div id="carritoListaYtotal" class="carritoListaYtotal" >
@@ -13,55 +13,55 @@
                 <div class="contenedorProducto">
                     <div class="carrito-item-descripcion">
                         <div class="imagenProductoCarrito">
-                            <img src= <%= productos[1].imagen%>>
+                            <img src= <%= products[1].imagen%>>
                         </div>
                         <div class="carrito-detallesProducto">
-                            <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
-                            <p class="producto-presentacion"> x <%= productos[1].presentacionProducto%></p>
-                            <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
-                            <p class="precio-competencia"> <%= productos[1].precioCompetencia%> </p>
+                            <p class="producto-detalle"> <%= products[1].descripcionProducto%> </p>
+                            <p class="producto-presentacion"> x <%= products[1].presentacionProducto%></p>
+                            <p class="precio-nuestro"> <%= products[1].precioProducto%> </p>
+                            <p class="precio-competencia"> <%= products[1].precioCompetencia%> </p>
                             <div class="producto-agregar">Agregar</div>                        
                         </div>
                     </div>
                     <div class="carrito-subtotalProducto">
                         <p>Subtotal:</p>
-                        <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
+                        <p class="precio-nuestro"> <%= products[1].precioProducto%> </p>
                     </div>
                 </div>
                 <div class="contenedorProducto">
                     <div class="carrito-item-descripcion">
                         <div class="imagenProductoCarrito">
-                            <img src= <%= productos[1].imagen%>>
+                            <img src= <%= products[1].imagen%>>
                         </div>
                         <div class="carrito-detallesProducto">
-                            <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
-                            <p class="producto-presentacion"> x <%= productos[1].presentacionProducto%></p>
-                            <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
-                            <p class="precio-competencia"> <%= productos[1].precioCompetencia%> </p>
+                            <p class="producto-detalle"> <%= products[1].descripcionProducto%> </p>
+                            <p class="producto-presentacion"> x <%= products[1].presentacionProducto%></p>
+                            <p class="precio-nuestro"> <%= products[1].precioProducto%> </p>
+                            <p class="precio-competencia"> <%= products[1].precioCompetencia%> </p>
                             <div class="producto-agregar">Agregar</div>                        
                         </div>
                     </div>
                     <div class="carrito-subtotalProducto">
                         <p>Subtotal:</p>
-                        <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
+                        <p class="precio-nuestro"> <%= products[1].precioProducto%> </p>
                     </div>
                 </div>
                 <div class="contenedorProducto">
                     <div class="carrito-item-descripcion">
                         <div class="imagenProductoCarrito">
-                            <img src= <%= productos[1].imagen%>>
+                            <img src= <%= products[1].imagen%>>
                         </div>
                         <div class="carrito-detallesProducto">
-                            <p class="producto-detalle"> <%= productos[1].descripcionProducto%> </p>
-                            <p class="producto-presentacion"> x <%= productos[1].presentacionProducto%></p>
-                            <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
-                            <p class="precio-competencia"> <%= productos[1].precioCompetencia%> </p>
+                            <p class="producto-detalle"> <%= products[1].descripcionProducto%> </p>
+                            <p class="producto-presentacion"> x <%= products[1].presentacionProducto%></p>
+                            <p class="precio-nuestro"> <%= products[1].precioProducto%> </p>
+                            <p class="precio-competencia"> <%= products[1].precioCompetencia%> </p>
                             <div class="producto-agregar">Agregar</div>                        
                         </div>
                     </div>
                     <div class="carrito-subtotalProducto">
                         <p>Subtotal:</p>
-                        <p class="precio-nuestro"> <%= productos[1].precioProducto%> </p>
+                        <p class="precio-nuestro"> <%= products[1].precioProducto%> </p>
                     </div>
                 </div>
             </div>
