--- a/site/src/views/categories/productsSubCategory.ejs
+++ b/site/src/views/categories/productsSubCategory.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-    <%- include('./../partials/head') %>
+    <%- include('../partials/head') %>
 <body>
     <header>
         <%- include('../partials/header') %>
