--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -1,10 +1,10 @@
 <div id="header-top">
-    <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="../img/menu-icon.svg"></div>
+    <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="../../../img/menu-icon.svg"></div>
     <div id="espacio-logo"><span id="logo">Marketfy</span></div>
     <div id="carrito">
         <div class="total-carrito"> $120.322</div>
         <div>
-            <img class="icono" src="../../../../img/shoppingcart-icon.svg">
+            <img class="icono" src="../../../img/shoppingcart-icon.svg">
         </div>
         <div class="circulo-rojo centrar-hijos-vertical-horizontal">
             <div class="inline-block blanco-negrita">22</div>
