--- a/site/src/views/partials/categoriesCarousel.ejs
+++ b/site/src/views/partials/categoriesCarousel.ejs
@@ -2,12 +2,14 @@
     <div class="categorias">
          <% categories.forEach(category => { %>
         <div class="categoria">
-            <div class="imagen-categoria">
-                <img src= <%= category.iconoCategoria%> >
-            </div>
-            <div class="nombre-categoria">
-                <span id="categoria1"><%= category.nombreCategoria%></span>
-            </div>
+            <a href="/categorias/<%=category.ruta%>">
+                <div class="imagen-categoria">
+                    <img src= <%= category.iconoCategoria%> >
+                </div>
+                <div class="nombre-categoria">
+                    <span id="categoria1"><%= category.nombreCategoria%></span>
+                </div>
+            </a>    
         </div>
         <% });%>
     </div>
