--- a/site/public/styles/home.css
+++ b/site/public/styles/home.css
@@ -155,6 +155,9 @@ header {
     display: flex;
     flex-direction: column;
 }
+.categoria > a {
+    text-decoration:none;
+}
 .categoria .imagen-categoria{
     height: 75px;
     width: 75px; 
@@ -211,11 +214,13 @@ header {
     font-size: var(--font-size-title);
     display:inline-block;
 }
+
 .catalogo-header-vertodo{
     font-size: var(--font-size-secondary);
     float:right;
     position:relative;
     top:15px;
+    color: var(--default-dark);
 }
 .catalogo-contenedor{
 /*     margin-right: var(--default-margin); */
@@ -502,9 +507,24 @@ header {
     border: var(--default-border-lighter);
     padding:var(--default-padding);
 }
+.container-subcategorias > a{
+    color: var(--default-dark);
+    text-decoration:none;
+}
 .subcategorias-container{
     padding: var(--default-padding) 0;
     padding-left: var(--default-padding);
     border-bottom: var(--default-border-lighter);
 }
 /* Fin Vista Sub-categorias */
+
+/**/
+.subcategoria-container {
+    display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
+}
+.subcategoria-container > div {
+    max-width: 0.5vw;
+
+}
