--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <div id="header-top">
     <div id="menu" class="centrar-hijos-vertical-horizontal"><img class="icono" src="../../../img/menu-icon.svg"></div>
-    <div id="espacio-logo"><span id="logo">Marketfy</span></div>
+    <a href="/"><div id="espacio-logo"><span id="logo">Marketfy</span></div></a>
     <div id="carrito">
         <div class="total-carrito"> $120.322</div>
         <div>
