--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
-<%- include('./../partials/head') %>
+<header>    <%- include('./../partials/head') %>
+    <%- include('../partials/header') %>
+</header>
+<body>
+    
+</body>
+</html>
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="es">
 
 <body>
     <header>
-        <%- include('../partials/header') %>
-        <%- include('../partials/categoriesCarousel') %>
-        <%- include('../partials/searcher') %>
     </header>
     <div class="contenedor">
         <div class="titulo">
@@ -45,4 +54,4 @@
     
 
 </body>
-</html>
+</html> -->
