Verificar Login. Borrar comentarios

--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -3,8 +3,28 @@
 <header>    <%- include('./../partials/head') %>
     <%- include('../partials/header') %>
 </header>
+
 <body>
-    
+<!--     <% if (typeof errors != 'undefined') { %>
+        <p style="color:red"> ERROR</p>
+        <ul>
+            <% for (let i= 0; i< errors.length; i++ ) { %>
+                <li>
+                    <% errors[i].msg %>
+                </li>
+            <% } %>
+
+        </ul>
+    <% } %>
+ -->
+
+    <form action="/usuario/login" method="POST">
+        <label for="">Email</label>
+        <input type="email" name="email"> <br>
+        <label for="">Password </label>
+        <input type="password" name="password"> <br>
+        <input type="submit" value="Iniciar Sesión">
+    </form>
 </body>
 </html>
 
