View Registro Login

--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -1,77 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
-<header>    <%- include('./../partials/head') %>
-    <%- include('../partials/header') %>
-</header>
 
-<body>
-<!--     <% if (typeof errors != 'undefined') { %>
-        <p style="color:red"> ERROR</p>
-        <ul>
-            <% for (let i= 0; i< errors.length; i++ ) { %>
-                <li>
-                    <% errors[i].msg %>
-                </li>
-            <% } %>
-
-        </ul>
-    <% } %>
- -->
-
-    <form action="/usuario/login" method="POST">
-        <label for="">Email</label>
-        <input type="email" name="email"> <br>
-        <label for="">Password </label>
-        <input type="password" name="password"> <br>
-        <input type="submit" value="Iniciar Sesión">
-    </form>
-</body>
-</html>
-
-
-
-
-<!-- <!DOCTYPE html>
-<html lang="es">
-
-<body>
+  <%- include('./../partials/head') %>
+  <body>
     <header>
+      <%- include('../partials/header') %>
+      <%- include('../partials/categoriesCarousel') %>
+      <%- include('../partials/searcher') %>
     </header>
     <div class="contenedor">
-        <div class="titulo">
-            <h3>Marketfy</h3>
-        </div>     
-
-        <div class="login">
-            <h3> Inicio de sesion </h3>
-            
-            <form action="registro.html" method="POST">
-                
-            
-                <div class="camposlogin">
-
-                  <input class="campo" type="email" name="correo" id="correo" placeholder="Usuario">
-                  <div> &nbsp; </div>
-                  <input class="campo" type="password" name="correo" id="contraseña" placeholder="Contraseña">
-                  <div> &nbsp; </div>
-
-                </div>
-
-            </form>
-                <div>
-                    <input class="botons" type="submit" value="Iniciar sesion">
-                </div>
-
-                <div>
-                    <p><a href="#">¿Olvidaste tu contraseña?</a></p>
-                </div>
-                
-
-        </div>    
-            
-
-    </div>
-    
-
-</body>
-</html> -->
+      
+        <div>
+          <form action="/" method="POST">
+              <div class="">
+                <label for="email">Email</label>
+                <input class="" type="text" name="email" id="" placeholder="Correo electrónico">
+              </div>
+              <div class="">
+                <label for="password">Contraseña</label>
+                <input class="" type="password" name="password" id="" placeholder="Contraseña">
+              </div>
+              <div>
+                <button type="submit">Iniciar sesión</button>
+              </div>
+          </form>
+        </div>
+      </div>
+  </body>
+</html>
