--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -4,46 +4,31 @@
   <%- include('./../partials/head') %>
   <body>
     <header>
-      <%- include('./partials/header') %>
-      <%- include('./partials/categoriesCarousel') %>
-      <%- include('./partials/searcher') %>
+      <%- include('../partials/header') %>
+      <%- include('../partials/categoriesCarousel') %>
+      <%- include('../partials/searcher') %>
     </header>
     <div class="contenedor">
       
-      <!----------------bienvenida -------->
         <div>
-          <form action="registro.html" method="POST">
-            <div>
-              <h4>Ingresa tus datos por favor</h4>
-            </div>
-            <!------------------------------------->
-            <div class="camposderegistro">
-              <input class="campo" type="text" name="nombres" id="nombres" placeholder="Ingresa tu Nombre">
-              <div> &nbsp; </div>
-              <input class="campo" type="email" name="correo" id="correo" placeholder="Ingresa tu Correo">
-              <div> &nbsp; </div>
-              <input class="campo" type="password" name="correo" id="contraseña" placeholder="Ingresa tu Contraseña">
-              <div> &nbsp; </div>
-            </div>
-            <!----------------datos del usuario ----------->
-            <div class="registrarme">
-            <!--- <label for="terminos"> Acepto los terminos y condiciones.</label>-->
-            <!--- <div class="checkbox"><input type="checkbox" name="terminos"></div>-->
-            </div>
-            <!-------------------aceptar terminos ------------------>
-            <div> &nbsp; </div>
-            <div>
-            <input class="botons" type="submit" value="Registrarme">
-            </div>
-            <!-------------------fin------------------>
+          <form action="/" method="POST">
+              <div class="">
+                <label for="email">Email</label>
+                <input class="" type="text" name="email" id="" placeholder="Correo electrónico">
+              </div>
+              <div class="">
+                <label for="email">Nombre Completo</label>
+                <input class="" type="text" name="email" id="" placeholder="Nombre Completo">
+              </div>
+              <div class="">
+                <label for="password">Contraseña</label>
+                <input class="" type="password" name="password" id="" placeholder="Contraseña">
+              </div>
+              <div>
+                <button type="submit">Registrarte</button>
+              </div>
           </form>
         </div>
-     </div>
-        <div> &nbsp; </div>
-        <div class="cuenta">
-                 
-          <p><a href="#">¿Ya tenes cuenta?</a></p>
-                
-        </div>
+      </div>
   </body>
 </html>
