--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -11,14 +11,19 @@
     <div class="contenedor">
       
         <div>
-          <form action="/" method="POST">
+          <form action="login" method="POST">
               <div class="">
                 <label for="email">Email</label>
-                <input class="" type="text" name="email" id="" placeholder="Correo electrónico">
+                <input class="" type="text" name="email" id="email" placeholder="Correo electrónico">
               </div>
               <div class="">
                 <label for="password">Contraseña</label>
-                <input class="" type="password" name="password" id="" placeholder="Contraseña">
+                <input class="" type="password" name="password" id="password" placeholder="Contraseña">
+              </div>
+              <div class="">
+                <label for="remember_user">
+                  <input class="" type="checkbox" name="remember_user" id="remember_user">Recordar mi usuario
+                </label>
               </div>
               <div>
                 <button type="submit">Iniciar sesión</button>
