--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -11,18 +11,18 @@
     <div class="contenedor">
       
         <div>
-          <form action="/" method="POST">
+          <form action="registro" method="POST">
               <div class="">
                 <label for="email">Email</label>
-                <input class="" type="text" name="email" id="" placeholder="Correo electrónico">
+                <input class="" type="text" name="email" id="email" placeholder="Correo electrónico">
               </div>
               <div class="">
                 <label for="email">Nombre Completo</label>
-                <input class="" type="text" name="email" id="" placeholder="Nombre Completo">
+                <input class="" type="text" name="fullName" id="fullName" placeholder="Nombre Completo">
               </div>
               <div class="">
                 <label for="password">Contraseña</label>
-                <input class="" type="password" name="password" id="" placeholder="Contraseña">
+                <input class="" type="password" name="password" id="password" placeholder="Contraseña">
               </div>
               <div>
                 <button type="submit">Registrarte</button>
