Middlewares de logueo > OK

--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -5,9 +5,9 @@
 
 <body>
     <header>
-    <%- include('./partials/header') %>
-    <%- include('./partials/categoriesCarousel') %>
-    <%- include('./partials/searcher') %>
+    <%- include('partials/header') %>
+    <%- include('partials/categoriesCarousel') %>
+    <%- include('partials/searcher') %>
     </header>
     <content>
         <div id="home-catalogo">
